gcc/testsuite/sarif-replay.dg/2.1.0-invalid/3.1-not-an-object.sarif
[ null ] // { dg-error "expected a sarifLog object as the top-level value \\\[SARIF v2.1.0 ยง3.1\\\]" }

/* { dg-begin-multiline-output "" }
    1 | [ null ]
      | ^~~~~~~~
   { dg-end-multiline-output "" } */
